<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.userprofile.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:id="@+id/profile_picture"
        android:src="@drawable/ramya" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/name1"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:id="@+id/name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_below="@id/profile_picture"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/birthday"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:id="@+id/birthday"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_below="@id/name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/school"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:id="@+id/school"
        android:textAppearance="@style/Base.TextAppearance.AppCompat"
        android:layout_below="@id/birthday"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/Github"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:id="@+id/project"
        android:layout_below="@id/school"
        android:autoLink="all"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/Linkedin"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:id="@+id/linkedin"
        android:layout_below="@id/project"
        android:autoLink="all"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/Blog"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:id="@+id/blog"
        android:layout_below="@id/linkedin"
        android:autoLink="all"/>

</RelativeLayout>

